bin/testsuite/tests/compiler/src/errors/compiler4416.swg
#global testerror "Err0217"
using Swag

//#[Swag.PrintBc]
#test
{
    var x: &&s32
}
